# glint

./: Cargo.toml  README.md
crates/glint-backend-ntfs/: Cargo.toml
crates/glint-backend-ntfs/src/: backend.rs  error.rs  lib.rs  mft.rs  stub.rs  usn.rs  volume.rs  winapi_utils.rs
crates/glint-cli/: Cargo.toml
crates/glint-cli/src/: app.rs  main.rs
crates/glint-cli/src/commands/: clear.rs  index.rs  mod.rs  query.rs  status.rs  watch.rs
crates/glint-cli/src/tui/: mod.rs
crates/glint-core/: Cargo.toml
crates/glint-core/src/: backend.rs  config.rs  error.rs  index.rs  lib.rs  persistence.rs  search.rs  types.rs
crates/glint-gui/: Cargo.toml  build.rs
crates/glint-gui/qml/: AboutDialog.qml  IndexBuilderDialog.qml  IndexingProgressDialog.qml  Main.qml  ResultsView.qml  SearchBar.qml  SettingsDialog.qml
crates/glint-gui/src/: app.rs  bridge.rs  installer.rs  main.rs  search.rs  service.rs  settings.rs  ui.rs
