[package]
name = "glint-backend-ntfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Windows NTFS backend for Glint (MFT + USN Journal)"
rust-version.workspace = true

[dependencies]
glint-core = { path = "../glint-core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
chrono.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true
