[package]
name = "glint-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core indexing and search library for Glint"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
lz4_flex.workspace = true
rayon.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
dashmap.workspace = true
regex.workspace = true
glob.workspace = true
aho-corasick.workspace = true
tracing.workspace = true
chrono.workspace = true
toml.workspace = true
directories.workspace = true
crc32fast = "1"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
memmap2 = "0.9"

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true
