[package]
name = "glint-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cross-platform GUI for Glint file search"
rust-version.workspace = true

[[bin]]
name = "glint-gui"
path = "src/main.rs"

[dependencies]
# Glint core
glint-core = { path = "../glint-core" }

# GUI framework (pure Rust, cross-platform)
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts",
    "glow",          # OpenGL renderer (more compatible)
    "persistence",   # Remember window size/position
] }
egui_extras = { version = "0.30", features = ["image"] }

# Native file dialogs (cross-platform)
rfd = "0.15"

# Workspace dependencies
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
directories.workspace = true
crossbeam-channel.workspace = true

# Clipboard support
arboard = "3.4"

# Platform-specific file operations  
open = "5.3"

# Serialization for settings
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
glint-backend-ntfs = { path = "../glint-backend-ntfs" }

# Windows-specific for installer and service
[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
]

[target.'cfg(windows)'.dependencies.winreg]
version = "0.52"
